# ecommerce_microservices

./: README.md  pyproject.toml
ecommerce_microservices/: app.py  models.py
ecommerce_microservices/auth_service/: auth_service.py
ecommerce_microservices/order_service/: order_service.py
ecommerce_microservices/product_service/: product_service.py
instance/: app.db
